Make replay disposition depend on explicit evidence
Use proxy liveness declarations and same-consumer structural scans for commit-eligible expiration. Keep silent or malformed capture state fail-closed, bound Kafka read-ahead with epsilon, and require an explicit poison allowlist before target failures can be committed.

Signed-off-by: Greg Schohn <schohn@amazon.com>